--- a/public/css/main.css
+++ b/public/css/main.css
@@ -33,7 +33,7 @@ body {
     position: absolute;
     top: 60px;
     width: calc(100% - 25px);
-    height: calc(84%);
+    height: 84%;
     margin-left: 10px;
     overflow-y: auto;
     border: 1px solid #ddd; /* светлый бордер */
